--- a/_posts/2023-02-01-test.md
+++ b/_posts/2023-02-01-test.md
@@ -1,7 +1,10 @@
-我们相恋七周年了
-===========================
-
-DATE: 2023-02-01
+---
+layout: post
+title:  "The Ride In The Woods"
+date:   2020-01-23
+featured_image: road.jpg
+tags: [Travel, Blogging]
+---
 
 小孙和小李的恋爱小屋🛖,转眼相知相恋7周年了，花、蛋糕...总觉得缺少点新意，加上最近经历的一次深刻的考验，二人的心也变得脆弱敏感，这次经历让我意识到爱情💑是需要用心呵护的，苦思冥想，想到了一份属于程序员送出的浪漫，建立了一个只属于小孙和小李的恋爱小屋，这里只展示着属于二人独有的甜蜜回忆。
 
